notification-webhook/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notification-webhook
  labels:
    name: notification-webhook
